--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body {
     min-height: 100vh;
     margin-top: 0;
     margin-bottom: 0;
-    /* align-items: center; */
 }
 
 header ul {
@@ -95,11 +94,10 @@ button.action {
 .hero button.action {
     border-width: 0;
     border-radius: 8px;
-    
 }
 
 .info {
-    background-color: #e5e7eb;
+    background-color: #f9faf8;
     color: #1f2937;
     text-align: center;
     display: flex;
@@ -131,4 +129,64 @@ button.action {
     border-radius: 12px;
     width: 160px;
     height: 160px;
+}
+
+section.quote {
+    background-color: #e5e7eb;
+    color: #1f2937;
+}
+
+.quote blockquote {
+    font-size: 36px;
+    font-style: italic;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.quote footer {
+    font-size: 28px;
+    font-weight: 600;
+    text-align: right;
+}
+
+section.action {
+    background-color: #f9faf8;
+}
+
+div.action {
+    background-color: #3882f6;
+    color: #e5e7eb;
+    padding: 16px 32px;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+div.action button.action {
+    border-width: 3px;
+    border-color: #e5e7eb;
+    border-radius: 8px;
+    border-style: solid;
+}
+
+div.action h2, p {
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+
+.container > footer {
+    background-color: #1f2937;
+    color: #e5e7eb;
+    text-align: center;
+}
+
+.container > footer a {
+    text-decoration: none;
+    color: #99a2af;
+}
+
+footer div {
+    margin: 8px;
 }
